--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/ca.rmen/porter-stemmer -->
+    <dependency>
+      <groupId>ca.rmen</groupId>
+      <artifactId>porter-stemmer</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
   </dependencies>
 </project>
