--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
           <artifactId>commons-compress</artifactId>
           <version>1.21</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>31.0.1-jre</version> <!-- Use the latest version -->
+      </dependency>
+
 
 
 
