--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
           <version>1.21</version>
       </dependency>
       <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-          <version>31.0.1-jre</version> <!-- Use the latest version -->
+          <groupId>org.junit.platform</groupId>
+          <artifactId>junit-platform-commons</artifactId>
+          <version>1.8.0</version> <!-- Replace with the desired version -->
       </dependency>
+
 
 
 
